[gd_scene load_steps=6 format=3 uid="uid://cihywklhjbwqs"]

[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_wcbli"]
[ext_resource type="Script" path="res://Scripts/MainMenuMoving.gd" id="2_aue0f"]
[ext_resource type="Texture2D" uid="uid://cvvchovybqttk" path="res://Assets/Backgrounds/FullNeighbourhood.png" id="3_4bjcu"]
[ext_resource type="AudioStream" uid="uid://cgcr7o4tmfnfk" path="res://Assets/SFX/ButtonClicked.wav" id="4_48n2p"]
[ext_resource type="AudioStream" uid="uid://b8enkm22qcrwa" path="res://Assets/Music/Main Menu.mp3" id="5_v36ll"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_wcbli")

[node name="Menu_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 1161.0
offset_bottom = 650.0

[node name="Title" type="RichTextLabel" parent="Menu_UI"]
layout_mode = 0
offset_left = 396.0
offset_top = 7.0
offset_right = 872.0
offset_bottom = 231.0
theme_override_font_sizes/normal_font_size = 40
text = "Redneck Redemption
Battle for The Minifigure"

[node name="Play_Button" type="Button" parent="Menu_UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.103
anchor_top = 0.35
anchor_right = 0.333
anchor_bottom = 0.5
offset_left = 0.416992
offset_top = 0.149979
offset_right = 0.386993
offset_bottom = -0.5
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Combat_Button" type="Button" parent="Menu_UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641
anchor_top = 0.352
anchor_right = 0.871
anchor_bottom = 0.5
offset_left = -0.20105
offset_top = -0.152023
offset_right = -0.231079
offset_bottom = 0.5
theme_override_font_sizes/font_size = 40
text = "Combat"

[node name="Settings_Button" type="Button" parent="Menu_UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.103
anchor_top = 0.7
anchor_right = 0.333
anchor_bottom = 0.849
offset_left = 0.416992
offset_top = 0.299957
offset_right = 0.386993
offset_bottom = 0.300964
theme_override_font_sizes/font_size = 40
text = "Settings
"
icon_alignment = 1

[node name="Exit_Button" type="Button" parent="Menu_UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641
anchor_top = 0.704
anchor_right = 0.871
anchor_bottom = 0.853
offset_left = -0.20105
offset_top = -0.304047
offset_right = -0.231079
offset_bottom = -0.30304
theme_override_font_sizes/font_size = 40
text = "Exit
"
icon_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_aue0f")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1980, 0)

[node name="FullNeighbourhood" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(1018.25, 322.75)
scale = Vector2(1.5059, 2.11093)
texture = ExtResource("3_4bjcu")

[node name="MenuSFX" type="Node2D" parent="."]

[node name="ClickedSFX" type="AudioStreamPlayer2D" parent="MenuSFX"]
stream = ExtResource("4_48n2p")
pitch_scale = 2.25

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="MenuSFX"]
stream = ExtResource("5_v36ll")

[connection signal="pressed" from="Menu_UI/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu_UI/Combat_Button" to="." method="_on_combat_button_pressed"]
[connection signal="pressed" from="Menu_UI/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu_UI/Exit_Button" to="." method="_on_exit_button_pressed"]
